--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,4 +1,52 @@
-body{
-    background: #C3E6C3;
+
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  color: black;
+  display: table;
+  font-weight: 100;
+  font-family: 'Lato';
+  background: #C3E6C3;
+}
+
+.container {
+  text-align: center;
+  display: table-cell;
+  vertical-align: middle;
+}
+
+.content {
+  text-align: center;
+  display: inline-block;
+}
+
+.title {
+  font-size: 96px;
+  margin-bottom: 40px;
+}
+
+.quote {
+  font-size: 24px;
+}
+
+ul{
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  li{
+    display: inline;
+    padding: 0 .5em;
+    font-size: 2em;
+  }
+}
+
+a{
+  text-decoration: none;
+  color: black;
+  &:hover{
+    color: #B20059;
+  }
 }
 
